src/test/ui/feature-gates/feature-gate-doc_alias.rs
#[doc(alias = "foo")] //~ ERROR: #[doc(alias = "...")] is experimental
pub struct Foo;

fn main() {}
